--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen.css">
+	<link rel="stylesheet" href="node_modules/shower/node_modules/shower-ribbon/styles/screen.css">
 </head>
 <body class="list">
 	<header class="caption">
@@ -15,7 +15,7 @@
 	<section class="slide cover" id="Cover"><div>
 		<h2>Shower Presentation Engine</h2>
 		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-		<img src="pictures/cover.jpg" alt="">
+		<img src="node_modules/shower/pictures/cover.jpg" alt="">
 		<!--
 			To apply styles to the certain slides
 			set slide ID to get needed elements
@@ -128,7 +128,7 @@
 	</div></section>
 	<section class="slide cover" id="Picture"><div>
 		<h2>Pictures</h2>
-		<img src="pictures/picture.jpg" alt="">
+		<img src="node_modules/shower/pictures/picture.jpg" alt="">
 		<style>
 			#Picture h2 {
 				color:#FFF;
@@ -149,7 +149,7 @@
 		</ol>
 	</div></section>
 	<section class="slide shout" id="SeeMore"><div>
-		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower">See more on GitHub</a></h2>
+		<h2><img src="node_modules/shower/pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower">See more on GitHub</a></h2>
 		<style>
 			#Picture h2 {
 				color:#FFF;
@@ -169,7 +169,7 @@
 		just remove “progress” element.
 		-->
 	<div class="progress"><div></div></div>
-	<script src="node_modules/shower-core/shower.min.js"></script>
+	<script src="node_modules/shower/node_modules/shower-core/shower.min.js"></script>
 	<!-- Copyright © 2014 Yours Truly, Famous Inc. -->
 	<!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
