--- a/index.html
+++ b/index.html
@@ -195,6 +195,19 @@
         </div>
     </section>
 
+    <section class="slide">
+        <div>
+            <h2>Links</h2>
+            
+            <ul>
+                <li><a href="https://github.com/piecioshka/simple-angular-app">https://github.com/piecioshka/simple-angular-app</a></li>
+                <li><a href="https://github.com/piecioshka/test-angular-unit-test">https://github.com/piecioshka/test-angular-unit-test</a></li>
+                <li><a href="https://github.com/piecioshka/presentation-angularjs-q-and-a">https://github.com/piecioshka/presentation-angularjs-q-and-a</a></li>
+                <li><a href="https://github.com/piecioshka/test-angular-disable-watchers">https://github.com/piecioshka/test-angular-disable-watchers</a></li>
+            </ul>
+        </div>
+    </section>
+
     <p class="badge"><a href="https://github.com/piecioshka/presentation-angularjs-q-and-a">Fork me on Github</a></p>
     <!--
         To hide progress bar from entire presentation
