Put alternative text on images.

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
 
             <figure>
                 <a href="http://piecioshka.pl/blog/">
-                    <img src="images/social/blog-icon.jpg" alt=""/>
+                    <img src="images/social/blog-icon.jpg" alt="Blog"/>
                     <span>piecioshka.pl/blog</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://github.com/piecioshka">
-                    <img src="images/social/github-icon.png" alt=""/>
+                    <img src="images/social/github-icon.png" alt="GitHub"/>
                     <span>github.com/piecioshka</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://twitter.com/piecioshka">
-                    <img src="images/social/twitter-icon.png" alt=""/>
+                    <img src="images/social/twitter-icon.png" alt="Twitter"/>
                     <span>twitter.com/piecioshka</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://soundcloud.com/piecioshka">
-                    <img src="images/social/soundcloud-icon.png" alt=""/>
+                    <img src="images/social/soundcloud-icon.png" alt="Soundcloud"/>
                     <span>soundcloud.com/piecioshka</span>
                 </a>
             </figure>
@@ -94,14 +94,14 @@
     <section class="slide cover">
         <div>
             <h2>Book: AngularJS</h2>
-            <img src="photos/book-angularjs/IMG_3775-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3775-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
             <h2>Book: AngularJS. Pierwsze Kroki.</h2>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3856-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3856-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
@@ -113,43 +113,43 @@
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3917-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3917-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3921-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3921-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3929-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3929-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3934-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3934-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3942-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3942-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3943-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3943-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs/IMG_3982-blur.jpg" alt="">
+            <img src="photos/book-angularjs/IMG_3982-blur.jpg" alt="Book: AngularJS">
         </div>
     </section>
 
@@ -161,109 +161,109 @@
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3871-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3871-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3872-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3872-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3875-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3875-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3877-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3877-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3878-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3878-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3880-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3880-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3882-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3882-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3883-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3883-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3884-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3884-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3887-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3887-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3890-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3890-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3903-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3903-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3904-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3904-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3905-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3905-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3906-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3906-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3908-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3908-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3913-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3913-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3914-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3914-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
@@ -338,7 +338,7 @@
 
     <section class="slide cover">
         <div>
-            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3915-blur.jpg" alt="">
+            <img src="photos/book-angularjs-pierwsze-kroki/IMG_3915-blur.jpg" alt="Book: AngularJS. Pierwsze kroki">
         </div>
     </section>
 
