Rename images by pictures.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <figure id="me">
                 <a href="http://piecioshka.pl/blog/">
-                    <img src="images/me.jpg" alt="" itemprop="photo">
+                    <img src="pictures/me.jpg" alt="" itemprop="photo">
                 </a>
 
                 <figcaption itemprop="name">Piotr Kowalski</figcaption>
@@ -53,7 +53,7 @@
     <section class="slide cover">
         <div>
             <h2>JavaScript Ninja</h2>
-            <img src="images/js.jpg" alt="">
+            <img src="pictures/js.jpg" alt="">
         </div>
     </section>
 
@@ -63,28 +63,28 @@
 
             <figure>
                 <a href="http://piecioshka.pl/blog/">
-                    <img src="images/social/blog-icon.jpg" alt="Blog"/>
+                    <img src="pictures/social/blog-icon.jpg" alt="Blog"/>
                     <span>piecioshka.pl/blog</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://github.com/piecioshka">
-                    <img src="images/social/github-icon.png" alt="GitHub"/>
+                    <img src="pictures/social/github-icon.png" alt="GitHub"/>
                     <span>github.com/piecioshka</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://twitter.com/piecioshka">
-                    <img src="images/social/twitter-icon.png" alt="Twitter"/>
+                    <img src="pictures/social/twitter-icon.png" alt="Twitter"/>
                     <span>twitter.com/piecioshka</span>
                 </a>
             </figure>
 
             <figure>
                 <a href="http://soundcloud.com/piecioshka">
-                    <img src="images/social/soundcloud-icon.png" alt="Soundcloud"/>
+                    <img src="pictures/social/soundcloud-icon.png" alt="Soundcloud"/>
                     <span>soundcloud.com/piecioshka</span>
                 </a>
             </figure>
