Use pseudonym instead of generic label.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <figure id="me">
                 <a href="http://piecioshka.pl/blog/">
-                    <img src="pictures/me.jpg" alt="" itemprop="photo">
+                    <img src="pictures/piecioshka.jpg" alt="" itemprop="photo">
                 </a>
 
                 <figcaption itemprop="name">Piotr Kowalski</figcaption>
