Create vendor directory.

--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
     </div>
 
     <script src="node_modules/shower/node_modules/shower-core/shower.min.js"></script>
-    <script src="scripts/gamepad.js"></script>
-    <script src="scripts/shower.gamepad.js"></script>
+    <script src="scripts/vendor/gamepad.js"></script>
+    <script src="scripts/vendor/shower.gamepad.js"></script>
     <!-- Copyright © 2014 Yours Truly, Famous Inc. -->
     <!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
