--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>AngularJS: Q&A</title>
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=792, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
@@ -449,9 +449,7 @@
 
     <section class="slide shout">
         <div>
-            <h2>
-                Thanks!
-            </h2>
+            <h2>Thanks!</h2>
         </div>
     </section>
 
