Detach social-slide.css.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="node_modules/shower/node_modules/shower-bright/styles/screen.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/social-slide.css">
 </head>
 <body class="list">
     <header class="caption">
@@ -57,7 +58,7 @@
         </div>
     </section>
 
-    <section class="slide" id="social-slide">
+    <section class="slide social-slide">
         <div>
             <h2>Where am I?</h2>
 
