Support schema.org

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </section>
 
-    <section class="slide">
+    <section class="slide" itemscope itemtype="http://data-vocabulary.org/Person">
         <div>
             <h2>Who am I?</h2>
 
