--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
     </section>
 
-    <section class="slide" itemscope itemtype="http://data-vocabulary.org/Person">
+    <section class="slide" itemscope itemtype="http://schema.org/Person">
         <div>
             <h2>Who am I?</h2>
 
             <strong itemprop="jobTitle">Kierownik Działu Aplikacji Webowych</strong>
 
-            <p>
-                <span itemprop="affiliation">Cyfrowy Polsat</span>,
+            <p itemscope itemtype="https://schema.org/Organization">
+                <span itemprop="name">Cyfrowy Polsat</span>,
                 <span itemprop="location">Warsaw</span>
             </p>
 
@@ -42,8 +42,8 @@
             <p class="note">"Kto chce szuka sposobu, kto nie chce szuka powodu."</p>
 
             <figure id="me">
-                <a href="http://piecioshka.pl/blog/">
-                    <img src="pictures/piecioshka.jpg" alt="" itemprop="photo">
+                <a href="http://piecioshka.pl/blog/" itemscope itemtype="https://schema.org/Photograph">
+                    <img src="pictures/piecioshka.jpg" alt="" itemprop="thumbnailUrl">
                 </a>
 
                 <figcaption itemprop="name">Piotr Kowalski</figcaption>
