Translate polish word.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <p>
                 <span itemprop="knows">JavaScript Ninja. Mac lover. Pebble evangelist.</span><br />
-                <span>Organizator <a href="http://warsawjs.com/" itemprop="memberOf">WarsawJS</a></span><br />
+                <span>Organizer <a href="http://warsawjs.com/" itemprop="memberOf">WarsawJS</a></span><br />
             </p>
 
             <p class="note">"Kto chce szuka sposobu, kto nie chce szuka powodu."</p>
