--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <dl>
                 <dt>Slides</dt>
                 <dd>
-                    <a href="https://github.com/piecioshka/presentation-angularjs-q-and-a">https://github.com/piecioshka/presentation-angularjs-q-and-a</a>
+                    <a href="https://github.com/piecioshka/slides/angularjs-q-and-a">https://github.com/piecioshka/slides/angularjs-q-and-a</a>
                 </dd>
                 <dt>Post about AngularJS training:</dt>
                 <dd>
@@ -475,9 +475,9 @@
         </div>
     </section>
 
-    <p class="badge"><a href="https://github.com/piecioshka/presentation-angularjs-q-and-a">Fork me on Github</a></p>
+    <p class="badge"><a href="https://github.com/piecioshka/slides/angularjs-q-and-a">Fork me on Github</a></p>
     <!--
-        To hide progress bar from entire presentation
+        To hide progress bar from entire slides
         just remove “progress” element.
         -->
     <div class="progress">
