Rename avatar filename: my-avatar.jpg

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <figure id="me">
             <a href="http://piecioshka.pl/blog/" itemscope itemtype="https://schema.org/Photograph">
-                <img src="pictures/me.jpg" alt="" itemprop="thumbnailUrl">
+                <img src="pictures/my-avatar.jpg" alt="" itemprop="thumbnailUrl">
             </a>
 
             <figcaption itemprop="name">Piotr Kowalski</figcaption>
