Fetch remote sources to local disk

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=792, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://npmcdn.com/shower-ribbon/styles/screen-16x10.css">
+    <link rel="stylesheet" href="vendors/shower-ribbon/styles/screen-16x10.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/social-slide.css">
 </head>
@@ -384,7 +384,7 @@
         -->
     <div class="progress"></div>
 
-    <script src="http://npmcdn.com/shower-core/shower.min.js"></script>
+    <script src="vendors/shower/scripts/shower.min.js"></script>
     <script src="vendors/gamepad.js"></script>
     <script src="vendors/shower.gamepad.js"></script>
     <!-- Copyright © 2014 Yours Truly, Famous Inc. -->
